fix/Minor fixos locale/typos

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "main-page": "Primelight OÜ - Management Consulting",
+    "main-page": "Primelight OU - Management Consulting",
     "services": "Services",
     "company": "Company",
     "team": "Team",
@@ -36,7 +36,7 @@
   "top-section": {
     "services": {
       "title": "Services",
-      "description": "Primelight OÜ’s team has designed innovative solutions that  combined with proven methodologies, manage compliance risks and address the significant challenges of regulatory compliance  that impact organizations."
+      "description": "Primelight OU’s team has designed innovative solutions that  combined with proven methodologies, manage compliance risks and address the significant challenges of regulatory compliance  that impact organizations."
     },
     "company": {
       "title": "Story of Primelight OU",
@@ -72,9 +72,9 @@
   "we deliver more": "We deliver more",
   "with an effective management model we ensure": "With an effective management model, we ensure that the money paid for our work is invested in the project, not into overheads",
   "the new office in yerevan": "The new office in Yerevan strengthens the company’s regional position",
-  "Primelight OÜ management consulting": "Primelight OÜ - Management Consulting",
+  "Primelight OU management consulting": "Primelight OU - Management Consulting",
   "Started as an alliance of advisory firms in the Baltic States": "Started as an alliance of advisory firms in the Baltic States, and headquartered in Estonia, Primelight OU is now the leading management consultancy from Central Eastern Europe",
-  "Primelight OÜ is the leading management consultancy from Central Eastern Europe": "Primelight OÜ is the leading management consultancy from Central Eastern Europe. Our consultancy services operate in over 40 countries in Europe, Asia, and USA, resulting in more than 10 000 successful projects. Primelight OÜ provides exclusive and traditional management consulting services to all clients over the world",
+  "Primelight OU is the leading management consultancy from Central Eastern Europe": "Primelight OU is the leading management consultancy from Central Eastern Europe. Our consultancy services operate in over 40 countries in Europe, Asia, and USA, resulting in more than 10 000 successful projects. Primelight OU provides exclusive and traditional management consulting services to all clients over the world",
   "We combine bold strategies and transformative technologies to help organizations innovate more sustainably": "We combine bold strategies and transformative technologies to help organizations innovate more sustainably, achieve lasting gains in performance, and build workforces that will thrive for this generation and the next",
   "Primelight OU provides management consulting and data analytic services to companies": "Primelight OU provides management consulting and data analytic services to companies, star-ups, SMEs, government organizations and etc., delivering professional services and great value for money",
   "Our services include strategy development": "Our services include strategy development, innovation, funding, research and implementation",
@@ -93,15 +93,15 @@
   "Digital": "Digital",
   "Sustainability": "Sustainability",
   "Connect companies and public organizations": "Connect companies and public organizations.",
-  "Where we are located": "Where we are&nbsp;located?",
-  "Primelight OU was founded": "Primelight OU was founded in Tallinn, Estonia back in 2012  and has been in continuous operation for more than 11 years.",
+  "Where we are located": "Where are we located?",
+  "Primelight OU was founded": "Primelight OU was founded in Estonia back in 2010 and has been in continuous operation for more than 11 years.",
   "Kosovo": "Kosovo",
   "and": "and",
   "Turkey": "Turkey",
   "with a sales offices in the": "with a sales offices in the",
   "Armenia": "Armenia",
   "United Kingdom": "United Kingdom",
-  "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe Asia and Africa": "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe, Asia and Africa. Primelight OÜ is known by many as the world’s leading consulting firm in the knowledge management field.",
+  "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe Asia and Africa": "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe, Asia and Africa. Primelight OU is known by many as the world’s leading consulting firm in the knowledge management field.",
   "Students and graduates": "Students and graduates",
   "We are always looking for young talents from our local markets who want to develop professionally": "We are always looking for young talents from our local markets who want to develop professionally by doing meaningful projects in their home countries and internationally. If you are a student or a recent graduate, we offer various internship and entry-level positions that will best suit your needs.",
   "Experienced professionals": "Experienced professionals",
@@ -120,7 +120,7 @@
   "Offices": "Offices",
   "Consultants": "Consultants",
   "Software Developers": "Software Developers",
-  "The companys corporate headquarters are located": "The company’s corporate headquarters are located in Tartu, Estonia. Our offices are spread across ",
+  "The companys corporate headquarters are located": "The company’s corporate headquarters are located in Tallinn, Estonia.",
   "Contact Us": "Contact Us",
   "Our offices": "Our offices",
   "Social": "Social",
@@ -135,12 +135,12 @@
   "Our consultants advise organizations on high-level decisions in strategic planning": "Our consultants advise organizations on high-level decisions in strategic planning, expansion of new markets, management modification using deep industry knowledge to deliver the best results. We offer the best strategy practices and experience gained across many countries and industries.",
   "We help making future by being in the whole innovation value chain from helping clients innovate to evaluating": "We help making future by being in the whole innovation value chain from helping clients innovate to evaluating, finding and creating sustainable innovations through our multiyear experience and professional team.",
   "We help clients to choose the right funding opportunities": "We help clients to choose the right funding opportunities, develop the project and follow through the implementation process. We also provide advisory services in national EU program funding, EU-level program funding (Horizon 2020).",
-  "We collect and analyze external and internal information": "We collect and analyze external and internal information in order to deliver the best solutions to our clients. Primelight OÜ conducts research into trends and developments in the consulting industry, aswell as performs research into trending topics at the intersection of management, economics, IT, real estate, construction and many other fields.",
+  "We collect and analyze external and internal information": "We collect and analyze external and internal information in order to deliver the best solutions to our clients. Primelight OU conducts research into trends and developments in the consulting industry, aswell as performs research into trending topics at the intersection of management, economics, IT, real estate, construction and many other fields.",
   "We help our clients to become more competitive": "We help our clients to become more competitive in the digital market by using Big Data and the latest IT innovations. We provide digital strategies, customer analysis and redesign, UX/UI, web and mobile software development, segmentation and other IT services.",
   "We provide support and assistance at all stages of the project implementation": "We provide support and assistance at all stages of the project implementation, by setting up and running project management office, helping with business development and expansion, as well as building outsourcing network in Central Eastern Europe.",
   "We ensure our clients stability in all daily operations in a strategic": "We ensure our clients stability in all daily operations in a strategic and qualitative manner, as well assist them in obtaining optimal funding opportunities. Our emphasis on sustainability, trust and tolerance for diverging opinions helps clients focus on their opportunities, build their capabilities and win the future.",
   "Case studies": "Case studies",
-  "Poland-based SAS Advisors is joining Primelight OÜ": "Poland-based SAS Advisors is joining Primelight OU",
+  "Poland-based SAS Advisors is joining Primelight OU": "Poland-based SAS Advisors is joining Primelight OU",
   "We combine traditional consulting model": "We combine traditional consulting model",
   "Fact-Based management consultig": "Fact-Based management consultig",
   "Experiences Team": "Experiences Team",
@@ -156,7 +156,7 @@
   "We challenge ourselves": "We challenge ourselves — we like unconventional projects",
   "Practical and Iimpact-Oriented": "Practical and Iimpact-Oriented",
   "Our history": "Our history",
-  "Primelight OÜ was established as an alliance of consulting companies in the Baltic States": "Primelight OU was established as an alliance of consulting companies in the Baltic States (Primelight OU, Innopolis, and Advisio). From its roots in the Baltics, Primelight OU has expanded in a puzzle-like fashion through organic growth, mergers, and acquisitions. Today, our company employs over 300 consultants in 18 countries, with about half of the employees working outside the Baltics.",
+  "Primelight OU was established as an alliance of consulting companies in the Baltic States": "Primelight OU was established as an alliance of consulting companies in the Baltic States (Primelight OU, Innopolis, and Advisio). From its roots in the Baltics, Primelight OU has expanded in a puzzle-like fashion through organic growth, mergers, and acquisitions. Today, our company employs over 300 consultants in 18 countries, with about half of the employees working outside the Baltics.",
   "Contact us and find out how we can work together": "Contact us and find out how we can work together",
   "Fill the contact form": "Fill the contact form",
   "Required fields": "Required fields",
@@ -172,7 +172,7 @@
   "I have read and understood that my personal data will be processed for contact purposes as described in the": "I have read and understood that my personal data will be processed for contact purposes as described in the",
   "Privacy notice for clients and external experts": "Privacy notice for clients and external experts",
   "Your form has been successfully send": "Your form has been successfully send",
-  "I agree to receive from CIVITTA information related to the services it offers": "I agree to receive from CIVITTA information related to the services it offers.",
+  "I agree to receive from Primelight OU information related to the services it offers": "I agree to receive from Primelight OU information related to the services it offers.",
   "Offices you want to contact": "Office(-s) you want to contact",
   "Your message": "Your message",
   "International senior team": "International senior team",
@@ -185,15 +185,15 @@
   "We value a high degree of responsibility and the importance of input from every employee from day one on the job": "We value a high degree of responsibility and the importance of input from every employee from day one on the job. Everyone is expected to contribute to overall success.",
   "Flexibility": "Flexibility",
   "We seek to balance getting the job done with employees": "We seek to balance getting the job done with employees’ lives outside work, creating the possibilities to combine studies, entrepreneurial activities, hobbies, sports, and family life.",
-  "Working at Primelight OÜ": "Working at Primelight OU",
-  "At Primelight OÜ we provide an enjoyable working atmosphere": "At Primelight OU, we provide an enjoyable working atmosphere, social events, offsite sessions and trips abroad for the whole company.",
+  "Working at Primelight OU": "Working at Primelight OU",
+  "At Primelight OU we provide an enjoyable working atmosphere": "At Primelight OU, we provide an enjoyable working atmosphere, social events, offsite sessions and trips abroad for the whole company.",
   "Fun": "Fun",
   "Stories of our people": "Stories of our people",
-  "Primelight OÜ Challengers": "Primelight OU Challengers",
-  "Consulting career path at Primelight OÜ": "Consulting career path at Primelight OU",
-  "We truly believe that our success lies in the talented and passionate team of professionals": "We truly believe that our success lies in the talented and passionate team of professionals who make CIVITTA a great place to work. We encourage our personnel to seek adventure in everything they do and help them to achieve their professional and personal goals.",
+  "Primelight OU Challengers": "Primelight OU Challengers",
+  "Consulting career path at Primelight OU": "Consulting career path at Primelight OU",
+  "We truly believe that our success lies in the talented and passionate team of professionals": "We truly believe that our success lies in the talented and passionate team of professionals who make Primelight OU a great place to work. We encourage our personnel to seek adventure in everything they do and help them to achieve their professional and personal goals.",
   "Searching for new career opportunities": "Searching for new career opportunities?",
-  "Apply now and build your career in Primelight OÜ": "Apply now and build your career in Primelight OU, gain international experience and make an impact. Fill in the application form. Our team will review it and contact you. For any questions regarding your application, send an email to",
+  "Apply now and build your career in Primelight OU": "Apply now and build your career in Primelight OU, gain international experience and make an impact. Fill in the application form. Our team will review it and contact you. For any questions regarding your application, send an email to",
   "Partner": "Partner",
   "Project manager / Team lead": "Project manager / Team lead",
   "Associate partner": "Associate partner",
@@ -211,7 +211,7 @@
   "I have read and understood that my personal data will be processed for the ongoing recruitment processpe": "I have read and understood that my personal data will be processed for the ongoing recruitment process, as described in the",
   "Privacy notice for applicants": "Privacy notice for applicants",
   "I agree to the storage of my personal data to be contacted": "I agree to the storage of my personal data to be contacted by Primelight OU for future employment opportunities, as described in the",
-  "I agree that Primelight OÜ shares my personal data internally": "I agree that Primelight OU shares my personal data internally, with other Primelight OU offices, as described in the",
+  "I agree that Primelight OU shares my personal data internally": "I agree that Primelight OU shares my personal data internally, with other Primelight OU offices, as described in the",
   "Preferred location": "Preferred location",
   "or": "or",
   "Upload CV": "Upload CV",
@@ -220,7 +220,7 @@
   "Privacy policy": "Privacy policy",
   "Cookie notice": "Cookie notice",
   "All": "All",
-  "Primelight OÜ International": "Primelight OU International",
+  "Primelight OU International": "Primelight OU International",
   "Send a message": "Send a message",
   "Visit country page": "Visit country page",
   "Navigate": "Navigate",
@@ -253,18 +253,19 @@
   "LIFE supports private bodies public entities and NGOs in the environment and climate field": "LIFE+ supports private bodies, public entities and NGOs in the environment and climate field by financing technology development, strategies and policy development aimed at ensuring nature conservation, biodiversity, environment and resource efficiency, climate change mitigation and adaptation.",
   "Innovation Fund": "Innovation Fund",
   "Innovation Fund supports innovation in the fields of energy-intensive industries": "Innovation Fund supports innovation in the fields of energy-intensive industries; renewables; energy storage; carbon capture, use and storage. The aim of the fund is to support investments in the next generation of technologies needed for EU‘s low-carbon transition as well as boost the growth and competitiveness of EU companies.",
-  "registry-code": "Primelight OU - Registry code 11954642",
+  "registry-code": "Primelight OU - Registry code 11954642 (Estonia)",
   "Registry code": "Registry code",
   "Registered 14": {
     "06": {
       "2010": "Registered 14.06.2010"
     }
   },
-  "address": "Tallinn, Lasnamäe linnaosa,",
+  "address": "Estonia, Tallinn,",
+  "address_second_row": "Lasnamäe linnaosa,",
   "We have no content in the selected article": "We have no content in the selected article",
   "Our latest articles": "Our latest articles",
   "We have no latest articles at the time": "We have no latest articles at the time",
-  "address 2": "Ruunaoja tn 3-81, 1141",
+  "address 2": "Ruunaoja tn 3-81, 11415",
   "We have no articles in the selected category": "We have no articles in the selected category",
   "Learn more about": "Learn more about",
   "Back": "Back",
