--- a/src/locales/et.json
+++ b/src/locales/et.json
@@ -3,10 +3,10 @@
   "All": "Kõik",
   "All rights reserved": "Kõik õigused kaitstud",
   "Analyst / Consultant": "Analüütik / konsultant",
-  "Apply now and build your career in Primelight OÜ": "Kandideeri kohe ja ehita oma karjääri Primelight OU-s, omandatavad kogemused ja avaldatud mõju. \nTäida taotlusvorm. \nMeie meeskond vaatab selle üle ja võtab teiega ühendust. \nKui teil on taotluse kohta küsimusi, saatke e-kiri aadressile",
+  "Apply now and build your career in Primelight OU": "Kandideeri kohe ja ehita oma karjääri Primelight OU-s, omandatavad kogemused ja avaldatud mõju. \nTäida taotlusvorm. \nMeie meeskond vaatab selle üle ja võtab teiega ühendust. \nKui teil on taotluse kohta küsimusi, saatke e-kiri aadressile",
   "Armenia": "Armeenia",
   "Associate partner": "Kaaspartner",
-  "At Primelight OÜ we provide an enjoyable working atmosphere": "Primelight OU-s pakume kogu ettevõttele meeldivat tööõhkkonda, seltskondlikke üritusi, välisseansse ja välisreise.",
+  "At Primelight OU we provide an enjoyable working atmosphere": "Primelight OU-s pakume kogu ettevõttele meeldivat tööõhkkonda, seltskondlikke üritusi, välisseansse ja välisreise.",
   "Bold And Innovative": "Julge ja uuenduslik",
   "Cascade Funding": "Kaskaadi rahastamine",
   "Cascade funding opportunities are calls organized within H2020 projects to tech start-ups or scale-ups via acceleration": "Kaskaadfinantseerimisvõimalused on H2020 projektide korraldavate konkursikutsed tehnoloogia alustamise või laienevatele ettevõtetele kiirendus-, inkubatsiooni- ja mentorprogrammide kaudu või projektide määratletud konkreetse uuendusliku tehnoloogia või raamistiku pilootprojektide, demonstratsioonide katsete ja elluviimiseks.",
@@ -14,7 +14,7 @@
   "Company information": "Ettevõtte info",
   "Connect companies and public organizations": "Ühendage ettevõtted ja avalikud organisatsioonid.",
   "Consultants": "Konsultandid",
-  "Consulting career path at Primelight OÜ": "Konsulteeriv karjääritee Primelight OU-s",
+  "Consulting career path at Primelight OU": "Konsulteeriv karjääritee Primelight OU-s",
   "Contact Us": "Võta meiega ühendust",
   "Contact us and find out how we can work together": "Võtke meiega ühendust ja uurige, kuidas saaksime teha",
   "Cookie notice": "Küpsise teatis",
@@ -42,8 +42,8 @@
   "Horizon Europe": "Horisont Euroopa",
   "Horizon Europe supports large international consortiums composing": "Horizon Europe toetab suuri rahvusvahelisi konsortsiumi, kuhu kuuluvad R",
   "How can we help you grow": "Kuidas saame aidata teil kasvada?",
-  "I agree that Primelight OÜ shares my personal data internally": "Nõustun, et Primelight OU jagab minu isikuandmeid sisemiselt teiste Primelight OU kontoritega, nagu on kirjeldatud",
-  "I agree to receive from CIVITTA information related to the services it offers": "Nõustun saama CIVITTA-lt teavet selle pakutavate teenuste kohta.",
+  "I agree that Primelight OU shares my personal data internally": "Nõustun, et Primelight OU jagab minu isikuandmeid sisemiselt teiste Primelight OU kontoritega, nagu on kirjeldatud",
+  "I agree to receive from Primelight OU information related to the services it offers": "Nõustun saama Primelight OU-lt teavet selle pakutavate teenuste kohta.",
   "I agree to the storage of my personal data to be contacted": "Nõustun oma isikuandmete säilitamisega, et Primelight OU võtab nendega tulevaste töövõimaluste osas ühendust, nagu on kirjeldatud dokumendis",
   "I have read and understood that my personal data will be processed for contact purposes as described in the": "Olen lugenud ja aru saanud, et minu isikuandmeid töödeldakse kontakteesmärkidel, nagu on kirjeldatud",
   "I have read and understood that my personal data will be processed for the ongoing recruitment processpe": "Olen lugenud ja aru saanud, et minu isikuandmeid töödeldakse käimasoleva värbamisprotsessi jaoks, nagu on kirjeldatud",
@@ -68,18 +68,18 @@
   "Local programs in Latvia for new products and technologies development in competence centers and innovation vouchers": "Kohalikud programmid Lätis uute toodete ja tehnoloogiate arendamiseks kompetentsikeskustes ning innovatsioonivautšerid.",
   "Local programs in Lithuania for industry digitization": "Leedu kohalikud programmid tööstuse digiteerimiseks, ökoinnovatsiooniks, rohelise tööstuse innovatsiooniks ja IKT-ks.",
   "Local programs in Romania for innovative green": "Kohalikud programmid Rumeenias uuenduslike roheliste, sinise ja IKT tehnoloogiate, toodete, protsesside ja lahenduste jaoks.",
-  "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe Asia and Africa": "Enamik meie projekte on pärit rahvusvahelisest mõtteviisist ja on taganud eduka koostöö klientidega Euroopas, Aasias ja Aafrikas. \nPrimelight OÜ on paljudele tuntud kui maailma juhtiv teadmusjuhtimise valdkonna konsultatsioonifirma.",
+  "Most of our projects come from an international mindset and have ensured successful cooperation with clients in Europe Asia and Africa": "Enamik meie projekte on pärit rahvusvahelisest mõtteviisist ja on taganud eduka koostöö klientidega Euroopas, Aasias ja Aafrikas. \nPrimelight OU on paljudele tuntud kui maailma juhtiv teadmusjuhtimise valdkonna konsultatsioonifirma.",
   "National branches": "Rahvuslikud filiaalid",
   "National financing opportunities": "Riiklikud rahastamisvõimalused",
   "Navigate": "Navigeerige",
   "Non - hierarchical organization": "Mittehierarhiline organisatsioon",
-  "Primelight OÜ Challengers": "Primelight OU väljakutsujad",
-  "Primelight OÜ International": "Primelight OU International",
-  "Primelight OÜ is the leading management consultancy from Central Eastern Europe": "Primelight OÜ on Kesk-Ida-Euroopa juhtiv juhtimiskonsultatsioonifirma. \nMeie nõustamisteenused tegutsevad enam kui 40 riigis Euroopas, Aasias ja USA-s, mille tulemuseks on üle 10 000 eduka projekti. \nPrimelight OÜ pakub eksklusiivseid ja traditsioonilisi juhtimisnõustamisteenuseid kõikidele klientidele üle maailma",
-  "Primelight OÜ was established as an alliance of consulting companies in the Baltic States": "Primelight OU loodi Balti riikide konsultatsiooniettevõtete liiduna (Primelight OU, Innopolis ja Advisio). \nPrimelight OU on Baltikumi juurtest alates orgaanilise kasvu, ühinemiste ja ülevõtmiste kaudu puslesarnaselt laienenud. \nTänaseks töötab meie ettevõttes üle 300 konsultandi 18 riigis, kusjuures ligikaudu pooled töötajatest töötavad väljaspool Baltikumi.",
+  "Primelight OU Challengers": "Primelight OU väljakutsujad",
+  "Primelight OU International": "Primelight OU International",
+  "Primelight OU is the leading management consultancy from Central Eastern Europe": "Primelight OU on Kesk-Ida-Euroopa juhtiv juhtimiskonsultatsioonifirma. \nMeie nõustamisteenused tegutsevad enam kui 40 riigis Euroopas, Aasias ja USA-s, mille tulemuseks on üle 10 000 eduka projekti. \nPrimelight OU pakub eksklusiivseid ja traditsioonilisi juhtimisnõustamisteenuseid kõikidele klientidele üle maailma",
+  "Primelight OU was established as an alliance of consulting companies in the Baltic States": "Primelight OU loodi Balti riikide konsultatsiooniettevõtete liiduna (Primelight OU, Innopolis ja Advisio). \nPrimelight OU on Baltikumi juurtest alates orgaanilise kasvu, ühinemiste ja ülevõtmiste kaudu puslesarnaselt laienenud. \nTänaseks töötab meie ettevõttes üle 300 konsultandi 18 riigis, kusjuures ligikaudu pooled töötajatest töötavad väljaspool Baltikumi.",
   "Primelight OU Provides methodological expertise to help its clients capture growth opportunity": "Primelight OU pakub metoodilisi teadmisi, et aidata oma klientidel kasvuvõimalusi kasutada.",
   "Primelight OU provides management consulting and data analytic services to companies": "Primelight OU pakub juhtimisnõustamis- ja andmeanalüütilisi teenuseid ettevõtetele, idufirmadele, VKEdele, valitsusasutustele jne, pakkudes professionaalseid teenuseid ja head hinna ja kvaliteedi suhet.",
-  "Primelight OU was founded": "Primelight OU asutati Eestis Tallinnas 2012. aastal ja on pidevalt tegutsenud üle 11 aasta.",
+  "Primelight OU was founded": "Primelight OU asutati Eestis juba 2010. aastal ja on pidevalt tegutsenud üle 11 aasta.",
   "Offices": "Kontorid",
   "Offices you want to contact": "Kontor(id), millega soovite ühendust võtta",
   "Our Services": "Meie teenused",
@@ -94,7 +94,7 @@
   "Partner": "Partner",
   "Paste link to your online profile": "Kleepige link oma veebiprofiilile (nt LinkedIn) või laadige üles oma CV",
   "Performs larger and more sophisticated tasks": "Täidab suuremaid ja keerukamaid ülesandeid, sealhulgas andmete analüüsi ja visualiseerimist, hüpoteeside sõnastamist ja kontrollimist jne.",
-  "Poland-based SAS Advisors is joining Primelight OÜ": "Poolas asuv SAS Advisors liitub Primelight OU-ga",
+  "Poland-based SAS Advisors is joining Primelight OU": "Poolas asuv SAS Advisors liitub Primelight OU-ga",
   "Positive and impactful innovation": "Positiivne ja mõjus innovatsioon",
   "Practical and Iimpact-Oriented": "Praktiline ja mõjule orienteeritud",
   "Preferred location": "Eelistatud asukoht",
@@ -131,7 +131,7 @@
   "Taking advantage of our unique origin and experience": "Kasutades ära oma ainulaadset päritolu ja kogemusi, kasutasime juhtimisnõustamissektoris Challengeri lähenemisviisi, et see lõhe ületada. \nOtsustasime segada nutikad inimesed lean protsesside ja struktuuridega, luues nii Kesk- ja Ida-Euroopa juhtiva ettevõtte.",
   "Team building and training packages": "Meeskonna moodustamise ja koolituspaketid",
   "The European Institute of Innovation and Technology supports the creation and fining of innovative solutions": "Euroopa Innovatsiooni- ja Tehnoloogiainstituut toetab koolitus- ja haridusprogrammide, uuenduslike toodete ja teenuste väljatöötamise ning idufirmade ja laienemisettevõtete kaudu uuenduslike lahenduste loomist ja trahvimist.",
-  "The companys corporate headquarters are located": "Ettevõtte peakontor asub Eestis Tartus. \nMeie kontorid asuvad laiali",
+  "The companys corporate headquarters are located": "Ettevõtte peakontor asub Tallinnas, Eestis.",
   "Turkey": "Türgi",
   "United Kingdom": "Ühendkuningriik",
   "Until today we have exported our business model to Emerging Europe": "Oleme tänaseni eksportinud oma ärimudelit nii arenevasse Euroopasse kui ka Põhjamaadesse ning nüüdseks oleme kohal 17 Euroopa riigis. \nOleme oma ettevõtet arendanud “ühe ettevõtte” põhimõttel – nii, et ka meie väiksemad kohalikud esindused suudavad teenindada suuri projekte mitmes valdkonnas.",
@@ -146,7 +146,7 @@
   "We challenge our clients": "Me esitame oma klientidele väljakutse – me ei karda esitada raskeid küsimusi ja aitame klientidel ennast või oma tegevusalasid proovile panna.",
   "We challenge our competitors": "Me esitame oma konkurentidele väljakutse – pakume suuremat väärtust mastaapselt.",
   "We challenge ourselves": "Me esitame endale väljakutse — meile meeldivad ebatavalised projektid",
-  "We collect and analyze external and internal information": "Kogume ja analüüsime välist ja sisemist teavet, et pakkuda oma klientidele parimaid lahendusi. \nPrimelight OÜ viib läbi konsultatsioonivaldkonna trendide ja arengute uuringuid, samuti uurib trendikaid teemasid juhtimise, majanduse, IT, kinnisvara, ehituse ja paljude teiste valdkondade ristumiskohas.",
+  "We collect and analyze external and internal information": "Kogume ja analüüsime välist ja sisemist teavet, et pakkuda oma klientidele parimaid lahendusi. \nPrimelight OU viib läbi konsultatsioonivaldkonna trendide ja arengute uuringuid, samuti uurib trendikaid teemasid juhtimise, majanduse, IT, kinnisvara, ehituse ja paljude teiste valdkondade ristumiskohas.",
   "We combine bold strategies and transformative technologies to help organizations innovate more sustainably": "Kombineerime julgeid strateegiaid ja ümberkujundavaid tehnoloogiaid, et aidata organisatsioonidel jätkusuutlikumalt uuendusi teha, saavutada püsivat tulemuslikkust ja luua tööjõudu, kes arenevad selle ja järgmise põlvkonna jaoks.",
   "We combine traditional consulting model": "Ühendame traditsioonilise nõustamismudeli",
   "We ensure our clients stability in all daily operations in a strategic": "Tagame oma klientidele stabiilsuse kõigis igapäevatoimingutes strateegiliselt ja kvalitatiivselt ning aitame neil leida optimaalseid rahastamisvõimalusi. \nMeie rõhuasetus jätkusuutlikkusele, usaldusele ja eriarvamuste sallivusele aitab klientidel keskenduda oma võimalustele, arendada oma võimekust ja võita tulevikku.",
@@ -164,18 +164,19 @@
   "We support start -ups and small companies involved in different industries": "Toetame idufirmasid ja väikeettevõtteid, kes on seotud erinevates tööstusharudes ning keskenduvad uuenduslikele ettevõtetele ja idufirmade ökosüsteemi arendamisele.",
   "We take a consistent approach to recruiting and skills development regardless of where our people are located": "Me kasutame järjepidevat lähenemist värbamisele ja oskuste arendamisele sõltumata meie inimeste asukohast, et saaksime kiiresti pakkuda õige meeskonna, õige kogemuse ja asjatundlikkusega, iga kliendini kõikjal maailmas.",
   "We truly believe that anyone can become a management consultant": "Usume tõeliselt, et igaüks võib saada juhtimiskonsultandiks ja rakendada asjakohaseid teadmisi organisatsioonides muutuste käivitamiseks ja ühiskonnale mõju avaldamiseks.",
-  "We truly believe that our success lies in the talented and passionate team of professionals": "Usume tõeliselt, et meie edu seisneb andekas ja kirglikus professionaalide meeskonnas, kes teevad CIVITTAst suurepärase töökoha. \nJulgustame oma töötajaid otsima seiklust kõiges, mida nad teevad, ning aitame neil saavutada oma tööalaseid ja isiklikke eesmärke.",
+  "We truly believe that our success lies in the talented and passionate team of professionals": "Usume tõeliselt, et meie edu seisneb andekas ja kirglikus professionaalide meeskonnas, kes teevad Primelight OUst suurepärase töökoha. \nJulgustame oma töötajaid otsima seiklust kõiges, mida nad teevad, ning aitame neil saavutada oma tööalaseid ja isiklikke eesmärke.",
   "We use innovative technologies to identify new ways to reach consumers and build enterprise resilience": "Kasutame uuenduslikke tehnoloogiaid, et leida uusi viise tarbijateni jõudmiseks ja ettevõtte vastupanuvõime suurendamiseks.",
   "We use methodologies and approaches of the traditional consulting toolkit": "Kasutame traditsioonilise nõustamise tööriistakomplekti metoodikaid ja lähenemisviise, keskendudes analüütilisele rangusele ja faktipõhisele probleemide lahendamisele. \nMeie eelnev nõustamiskogemus enam kui 10 000 projektis ja ulatuslik võrgustik võimaldavad meil kasutada parimaid tööstus- ja funktsionaalseid tavasid.",
   "We value a high degree of responsibility and the importance of input from every employee from day one on the job": "Hindame iga töötaja kõrget vastutustundlikkust ja panuse tähtsust alates esimesest tööpäevast. \nKõigilt oodatakse panust üldisesse edusse.",
   "We value people who are not ordinary and who do not want to do everyday things": "Väärtustame inimesi, kes ei ole tavalised ja kes ei taha teha igapäevaseid asju. \nOleme avatud uutele kogemustele ja status quo väljakutsetele. \nSiin pole kunagi igav!",
   "What we do": "Mida me teeme?",
-  "Where we are located": "Kus me oleme",
-  "Working at Primelight OÜ": "Töötamine ettevõttes Primelight OU",
+  "Where we are located": "Kus me asume?",
+  "Working at Primelight OU": "Töötamine ettevõttes Primelight OU",
   "Works more closely with client team members and owns a particular stream": "Teeb tihedamat koostööd kliendimeeskonna liikmetega ja omab projektis konkreetset voogu, näiteks tegevusanalüüsi, turu-uuringu, finantsmudeli jms teostamine.",
   "Your form has been successfully send": "Teie vorm on edukalt saadetud",
   "Your message": "Sinu sõnum",
-  "address": "Tallinn, Lasnamäe linnaosa,",
+  "address": "Estonia, Tallinn,",
+  "address_second_row": "Lasnamäe linnaosa,",
   "and": "ja",
   "button": {
     "apply now": "Kandideeri kohe",
@@ -205,7 +206,7 @@
     "surname": "Perekonnanimi",
     "company name": "Ettevõtte nimi"
   },
-  "registry-code": "Primelight OU – registrikood 11954642",
+  "registry-code": "Primelight OU - Registrikood 11954642 (Eesti)",
   "services": {
     "our approach": "Meie lähenemine",
     "our news": "Meie uudised",
@@ -221,7 +222,7 @@
     "company": "Ettevõte",
     "contact": "võta ühendust",
     "financing": "Finantseerimine",
-    "main-page": "Primelight OÜ - Juhtimisnõustamine",
+    "main-page": "Primelight OU - Juhtimisnõustamine",
     "services": "Teismelised",
     "team": "Meeskond"
   },
@@ -247,7 +248,7 @@
       "title": "Finantseerimine"
     },
     "services": {
-      "description": "Primelight OÜi meeskond on välja töötanud uuenduslikud lahendused, mis koostatud metoodikatega juhivad vastavusriske ja tegelevad organisatsiooni mõjutavate regulatiivsete vastavuse olulise tähtsusega.",
+      "description": "Primelight OU meeskond on välja töötanud uuenduslikud lahendused, mis kombineerituna tõestatud metoodikatega juhivad vastavusriske ja lahendavad organisatsioone mõjutavaid olulisi regulatiivsete vastavuse väljakutseid.",
       "title": "Teismelised"
     },
     "team": {
@@ -261,9 +262,9 @@
   "with an effective management model we ensure": "Tõhusa juhtimismudeliga tagame, et meie töö eest makstud raha investeeritakse projekti, mitte üldkuludesse",
   "with unique central and eastern": "Ainulaadne Kesk- ja Ida-",
   "We have no latest articles at the time": "Meil pole sel ajal uusimaid artikleid",
-  "address 2": "Ruunaoja tn 3-81, 1141",
+  "address 2": "Ruunaoja tn 3-81, 11415",
   "or": "või",
-  "Primelight OÜ management consulting": "Primelight OÜ juhtimiskonsultatsioonid",
+  "Primelight OU management consulting": "Primelight OU juhtimiskonsultatsioonid",
   "over 18 countries throughout europe": "Üle 18 riigi üle Euroopa",
   "We have no articles in the selected category": "Meil pole valitud kategoorias artikleid",
   "Learn more about": "Lisateavet",
