hotfix:  removed "150+ software developers"

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,7 +44,7 @@
     },
     "team": {
       "title": "Team",
-      "description": "Our team of 350+ consultants and 150+ software developers is led by Partners and Managers. These individuals working across 18 countries combine strong educational credentials, intellectual curiosity, proven leadership capacity and commitment to values."
+      "description": "Our team of 350+ consultants is led by Partners and Managers. These individuals working across 18 countries combine strong educational credentials, intellectual curiosity, proven leadership capacity and commitment to values."
     },
     "careers": {
       "title": "Careers",
