fix/Minor fixos (150+ Software Developers to 11 years of experience)

--- a/src/locales/et.json
+++ b/src/locales/et.json
@@ -277,5 +277,6 @@
   "Email": "Meil",
   "Experience level": "Kogemuse tase",
   "Upload": "Laadi üles",
-  "Upload documents placeholder": "Laadige üles dokumendid (nt lühikirjeldus, projekti kirjeldus)"
+  "Upload documents placeholder": "Laadige üles dokumendid (nt lühikirjeldus, projekti kirjeldus)",
+  "Years of experience": "Aastatepikkune kogemus"
 }
