--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -277,5 +277,6 @@
   "Email": "Email",
   "Experience level": "Experience level",
   "Upload": "Upload",
-  "Upload documents placeholder": "Upload documents (e.g. brief, project description)"
+  "Upload documents placeholder": "Upload documents (e.g. brief, project description)",
+  "Years of experience": "Years of experience"
 }
